--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "jiasong.me",
+  "homepage": "https://jiasong.me",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,6 +15,9 @@
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "web-vitals": "^1.1.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
