--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://jiasong.me",
+  "homepage": "http://jiasong.me",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
