--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "http://jiasong.me",
+  "homepage": "https://jiasong214.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
@@ -9,11 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "framer-motion": "^5.5.5",
-    "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sass": "^1.87.0",
     "web-vitals": "^2.1.2"
   },
   "devDependencies": {
